fix(theme): fix layout shift caused by navbar hide

--- a/packages/theme/src/client/module/blog/styles/layout.scss
+++ b/packages/theme/src/client/module/blog/styles/layout.scss
@@ -1,33 +1,35 @@
-.page.blog {
-  box-sizing: border-box;
-  min-height: 100vh;
-  margin: 0px auto;
-  padding-top: var(--navbar-height);
-  padding-bottom: 2rem;
-  background: var(--bg-color-back);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.theme-container {
+  .page.blog {
+    box-sizing: border-box;
+    min-height: 100vh;
+    margin: 0px auto;
+    padding-top: var(--navbar-height);
+    padding-bottom: 2rem;
+    background: var(--bg-color-back);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-  @media (min-width: hope-config.$wide) {
-    // fix toc padding
-    .has-toc & {
+    @media (min-width: hope-config.$wide) {
+      // fix toc padding
+      .has-toc & {
+        padding-right: 0;
+      }
+    }
+
+    @media (max-width: hope-config.$pad) {
+      padding-top: var(--navbar-mobile-height);
+    }
+
+    @media (max-width: hope-config.$mobile) {
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
+    }
+
+    @media (max-width: hope-config.$mobileS) {
+      padding-left: 0;
       padding-right: 0;
     }
-  }
-
-  @media (max-width: hope-config.$pad) {
-    padding-top: var(--navbar-mobile-height);
-  }
-
-  @media (max-width: hope-config.$mobile) {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  @media (max-width: hope-config.$mobileS) {
-    padding-left: 0;
-    padding-right: 0;
   }
 }
 
